Refactor : LifeRuleEntity 추가로 인한 로직 변경