@@ -1,34 +1,33 @@
 package com.ssafy.chaing.rule.service;
 
-
 import com.ssafy.chaing.common.exception.BadRequestException;
 import com.ssafy.chaing.common.exception.ExceptionCode;
 import com.ssafy.chaing.group.domain.GroupEntity;
 import com.ssafy.chaing.group.domain.GroupUserEntity;
-import com.ssafy.chaing.group.repository.GroupRepository;
 import com.ssafy.chaing.group.repository.GroupUserRepository;
 import com.ssafy.chaing.rule.controller.request.LifeRuleApproveRequest;
 import com.ssafy.chaing.rule.controller.request.LifeRuleFormRequest;
 import com.ssafy.chaing.rule.controller.request.LifeRuleUpdateRequest;
-import com.ssafy.chaing.rule.controller.request.RecommendCategoryRequest;
 import com.ssafy.chaing.rule.controller.response.LifeRuleResponse;
-import com.ssafy.chaing.rule.controller.response.RecommendCategoryResponse;
 import com.ssafy.chaing.rule.domain.ChangeRequestStatus;
 import com.ssafy.chaing.rule.domain.LifeRuleChangeItemEntity;
 import com.ssafy.chaing.rule.domain.LifeRuleChangeRequestEntity;
 import com.ssafy.chaing.rule.domain.LifeRuleEntity;
 import com.ssafy.chaing.rule.domain.LifeRuleItemEntity;
+import com.ssafy.chaing.rule.domain.LifeRuleUserEntity;
 import com.ssafy.chaing.rule.dto.LifeRuleDto;
 import com.ssafy.chaing.rule.dto.LifeRuleUpdateDto;
 import com.ssafy.chaing.rule.repository.LifeRuleChangeItemRepository;
 import com.ssafy.chaing.rule.repository.LifeRuleChangeRequestRepository;
 import com.ssafy.chaing.rule.repository.LifeRuleItemRepository;
 import com.ssafy.chaing.rule.repository.LifeRuleRepository;
+import com.ssafy.chaing.rule.repository.LifeRuleUserRepository;
 import com.ssafy.chaing.user.domain.UserEntity;
-import com.ssafy.chaing.user.repository.UserRepository;
 import jakarta.transaction.Transactional;
 import java.time.ZonedDateTime;
 import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -39,20 +38,19 @@ import org.springframework.stereotype.Service;
 @Slf4j
 public class RuleServiceImpl implements RuleService {
 
-    private final UserRepository userRepository;
-    private final GroupRepository groupRepository;
     private final GroupUserRepository groupUserRepository;
     private final LifeRuleRepository lifeRuleRepository;
     private final LifeRuleItemRepository lifeRuleItemRepository;
     private final LifeRuleChangeRequestRepository lifeRuleChangeRequestRepository;
     private final LifeRuleChangeItemRepository lifeRuleChangeItemRepository;
+    private final LifeRuleUserRepository lifeRuleUserRepository;
 
     @Override
     @Transactional
     public LifeRuleResponse createLifeRule(LifeRuleFormRequest request, Long userId) {
-
-        UserEntity user = findUserOrThrow(userId);
-        GroupEntity group = findGroupOrThrow(user);
+        GroupEntity group = groupUserRepository.findByUserIdWithGroup(userId)
+                .map(GroupUserEntity::getGroup)
+                .orElseThrow(() -> new BadRequestException(ExceptionCode.USER_NOT_IN_GROUP));
 
         if (lifeRuleRepository.findByGroup(group).isPresent()) {
             throw new BadRequestException(ExceptionCode.LIFE_RULE_ALREADY_EXISTS);
@@ -63,51 +61,49 @@ public class RuleServiceImpl implements RuleService {
                 .build();
         lifeRuleRepository.save(lifeRule);
 
-        List<LifeRuleItemEntity> items = request.getRules().stream()
+        Set<UserEntity> groupUsers = groupUserRepository.findAllUsersInGroupByUserId(userId);
+        Set<LifeRuleUserEntity> lifeRuleUserEntities = groupUsers.stream()
+                .map(u -> LifeRuleUserEntity.builder()
+                        .user(u)
+                        .lifeRule(lifeRule)
+                        .isVoted(false)
+                        .build())
+                .collect(Collectors.toSet());
+        lifeRule.setLifeRuleUsers(lifeRuleUserEntities);
+
+        Set<LifeRuleItemEntity> items = request.getRules().stream()
                 .map(form -> LifeRuleItemEntity.builder()
                         .lifeRule(lifeRule)
                         .content(form.getContent())
                         .category(form.getCategory())
                         .build())
-                .toList();
-
+                .collect(Collectors.toSet());
         lifeRuleItemRepository.saveAll(items);
         lifeRule.setItems(items);
-        int totalUser = (int) groupUserRepository.countByGroup_Id(group.getId());
 
         LifeRuleChangeRequestEntity changeRequest = LifeRuleChangeRequestEntity.builder()
                 .lifeRule(lifeRule)
-                .totalGroupMember(totalUser)
-//                .requestedBy(groupUser)
+                .totalGroupMember(groupUsers.size())
                 .requestedAt(ZonedDateTime.now())
                 .approvalCount(1)
                 .status(ChangeRequestStatus.PROGRESS)
                 .build();
         lifeRuleChangeRequestRepository.save(changeRequest);
 
-        return LifeRuleResponse.fromDTO(convertToDtoList(items));
+        return LifeRuleResponse.fromDTO(convertToDtoSet(items));
     }
 
     @Override
     public LifeRuleResponse getLifeRules(Long userId) {
-        UserEntity user = findUserOrThrow(userId);
-        GroupEntity group = findGroupOrThrow(user);
-        LifeRuleEntity lifeRule = findLifeRuleOrThrow(group);
-
-        List<LifeRuleItemEntity> items = lifeRuleItemRepository.findAllByLifeRule(lifeRule);
-
-//        return LifeRuleResponse.fromDTO(convertToDtoList(items));
-        LifeRuleResponse lifeRuleResponse = LifeRuleResponse.fromDTO(convertToDtoList(items));
-        log.info(" result is = {}", lifeRuleResponse);
-        return lifeRuleResponse;
+        LifeRuleEntity lifeRule = findLifeRuleByUserIdOrThrow(userId);
+        Set<LifeRuleItemEntity> items = lifeRuleItemRepository.findAllByLifeRule(lifeRule);
+        return LifeRuleResponse.fromDTO(convertToDtoSet(items));
     }
 
     @Override
     @Transactional
     public List<LifeRuleUpdateDto> updateRules(LifeRuleUpdateRequest request, Long userId) {
-        UserEntity user = findUserOrThrow(userId);
-        GroupEntity group = findGroupOrThrow(user);
-        LifeRuleEntity lifeRule = findLifeRuleOrThrow(group);
+        LifeRuleEntity lifeRule = findLifeRuleByUserIdOrThrow(userId);
 
         LifeRuleChangeRequestEntity changeRequest = lifeRuleChangeRequestRepository
                 .findByLifeRule(lifeRule)
@@ -121,16 +117,20 @@ public class RuleServiceImpl implements RuleService {
                     return lifeRuleChangeRequestRepository.save(newRequest);
                 });
 
+        LifeRuleUserEntity lifeRuleUserEntity = lifeRuleUserRepository
+                .findByLifeRuleAndUserId(lifeRule, userId)
+                .orElseThrow(() -> new BadRequestException(ExceptionCode.LIFE_RULE_USER_NOT_FOUND));
+        lifeRuleUserEntity.setVoted(true);
+
         List<LifeRuleChangeItemEntity> changeItems = request.getUpdates().stream()
                 .map(update -> LifeRuleChangeItemEntity.builder()
                         .changeRequest(changeRequest)
-                        .ruleItemId(update.getId()) // create는 null일 수 있음
+                        .ruleItemId(update.getId())
                         .newValue(update.getContent())
                         .category(update.getCategory())
                         .actionType(update.getActionType())
                         .build())
                 .toList();
-
         changeRequest.getChangeItems().addAll(changeItems);
 
         return changeItems.stream().map(changeItem -> {
@@ -140,23 +140,18 @@ public class RuleServiceImpl implements RuleService {
             dto.setActionType(changeItem.getActionType());
             dto.setCategory(changeItem.getCategory());
             return dto;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @Override
     public List<LifeRuleUpdateDto> getUpdateLifeRule(Long userId) {
-        UserEntity user = findUserOrThrow(userId);
-        GroupEntity group = findGroupOrThrow(user);
-        LifeRuleEntity lifeRule = findLifeRuleOrThrow(group);
-
-        // 현재 PROGRESS 상태의 요청만 조회
+        LifeRuleEntity lifeRule = findLifeRuleByUserIdOrThrow(userId);
         LifeRuleChangeRequestEntity changeRequest = lifeRuleChangeRequestRepository
                 .findByLifeRuleAndStatus(lifeRule, ChangeRequestStatus.PROGRESS)
                 .orElseThrow(() -> new BadRequestException(ExceptionCode.LIFE_RULE_CHANGE_REQUEST_NOT_FOUND));
 
         List<LifeRuleChangeItemEntity> changeItems =
                 lifeRuleChangeItemRepository.findNotDeletedByChangeRequest(changeRequest);
-
         return changeItems.stream().map(item -> {
             LifeRuleUpdateDto dto = new LifeRuleUpdateDto();
             dto.setId(item.getRuleItemId());
@@ -164,24 +159,28 @@ public class RuleServiceImpl implements RuleService {
             dto.setCategory(item.getCategory());
             dto.setActionType(item.getActionType());
             return dto;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     @Override
     @Transactional
     public void approveLifeRule(LifeRuleApproveRequest request, Long userId) {
-        UserEntity user = findUserOrThrow(userId);
-        GroupEntity group = findGroupOrThrow(user);
-        LifeRuleEntity lifeRule = findLifeRuleOrThrow(group);
+        LifeRuleEntity lifeRule = findLifeRuleByUserIdOrThrow(userId);
 
-        // 1. 현재 진행 중인 요청 조회 (베타락으로 처리 필요 시 여기서 처리)
+        LifeRuleUserEntity lifeRuleUserEntity = lifeRuleUserRepository
+                .findByLifeRuleAndUserId(lifeRule, userId)
+                .orElseThrow(() -> new BadRequestException(ExceptionCode.LIFE_RULE_USER_NOT_FOUND));
+        if (lifeRuleUserEntity.isVoted()) {
+            throw new BadRequestException(ExceptionCode.LIFE_RULE_USER_ALREADY_VOTED);
+        }
+        lifeRuleUserEntity.setVoted(true);
+
         LifeRuleChangeRequestEntity changeRequest = lifeRuleChangeRequestRepository
                 .findWithLockByLifeRuleAndStatus(lifeRule, ChangeRequestStatus.PROGRESS)
                 .orElseThrow(() -> new BadRequestException(ExceptionCode.LIFE_RULE_CHANGE_REQUEST_NOT_FOUND));
 
         if (request.isApproved()) {
             changeRequest.approve(changeRequest.getTotalGroupMember());
-
             if (changeRequest.getStatus() == ChangeRequestStatus.APPROVED) {
                 for (LifeRuleChangeItemEntity changeItem : changeRequest.getChangeItems()) {
                     switch (changeItem.getActionType()) {
@@ -201,51 +200,30 @@ public class RuleServiceImpl implements RuleService {
                         case DELETE -> {
                             LifeRuleItemEntity toDelete = lifeRuleItemRepository.findById(changeItem.getRuleItemId())
                                     .orElseThrow(() -> new BadRequestException(ExceptionCode.LIFE_RULE_ITEM_NOT_FOUND));
-                            lifeRuleItemRepository.delete(toDelete); // or soft delete
+                            lifeRule.getItems().remove(toDelete);
+                            lifeRuleItemRepository.delete(toDelete);
                         }
                     }
                 }
                 changeRequest.clear();
-                List<LifeRuleChangeItemEntity> itemsToDelete = changeRequest.getChangeItems();
-                for (LifeRuleChangeItemEntity item : itemsToDelete) {
-                    item.clear();
-                }
+                changeRequest.getChangeItems().forEach(LifeRuleChangeItemEntity::clear);
+                lifeRuleUserRepository.findByLifeRule(lifeRule)
+                        .forEach(lru -> lru.setVoted(false));
             }
-        }else{
-            List<LifeRuleChangeItemEntity> itemsToDelete = changeRequest.getChangeItems();
-            for (LifeRuleChangeItemEntity item : itemsToDelete) {
-                item.clear();
-            }
+        } else {
+            changeRequest.clear();
+            changeRequest.getChangeItems().forEach(LifeRuleChangeItemEntity::clear);
+            lifeRuleUserRepository.findByLifeRule(lifeRule)
+                    .forEach(lru -> lru.setVoted(false));
         }
     }
 
-
-    private UserEntity findUserOrThrow(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new BadRequestException(ExceptionCode.USER_NOT_FOUND));
-    }
-
-    private GroupEntity findGroupOrThrow(UserEntity user) {
-        Long groupId = user.getGroupId();
-        log.info("user id is = {}", user.getId());
-        log.info("group id is = {}", groupId);
-//        if (groupId == null) {
-//            throw new BadRequestException(ExceptionCode.USER_NOT_IN_GROUP);
-//        }
-
-//        return groupRepository.findById(groupId)
-//                .orElseThrow(() -> new BadRequestException(ExceptionCode.GROUP_NOT_FOUND));
-        return groupUserRepository.findByUser_Id(user.getId())
-                .map(GroupUserEntity::getGroup)
-                .orElseThrow(() -> new BadRequestException(ExceptionCode.USER_NOT_IN_GROUP));
-    }
-
-    private LifeRuleEntity findLifeRuleOrThrow(GroupEntity group) {
-        return lifeRuleRepository.findByGroup(group)
+    private LifeRuleEntity findLifeRuleByUserIdOrThrow(Long userId) {
+        return lifeRuleRepository.findByUserId(userId)
                 .orElseThrow(() -> new BadRequestException(ExceptionCode.LIFE_RULE_NOT_FOUND));
     }
 
-    private List<LifeRuleDto> convertToDtoList(List<LifeRuleItemEntity> items) {
+    private List<LifeRuleDto> convertToDtoSet(Set<LifeRuleItemEntity> items) {
         return items.stream()
                 .map(item -> {
                     LifeRuleDto dto = new LifeRuleDto();
@@ -254,6 +232,6 @@ public class RuleServiceImpl implements RuleService {
                     dto.setCategory(item.getCategory());
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 }
